# machine-learning-for-actuarial-science

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  index.ipynb  main.py  pyproject.toml  requirements.txt  run.sh
2025-spring/: README.md
2025-spring/final/: README.md  rubrics.md  topics.md
2025-spring/week01/: README.md
2025-spring/week01/data/: Employees.xls  SalesTerritory.xls  imf-gdp-per-capita-2015.csv  test_output.csv
2025-spring/week01/notebook/: demo.ipynb
2025-spring/week03/: README.md
2025-spring/week03/notebook/: demo.ipynb
2025-spring/week04/: README.md
2025-spring/week04/notebook/: demo.ipynb
2025-spring/week05/: README.md
2025-spring/week05/notebook/: demo.ipynb
2025-spring/week06/: README.md
2025-spring/week06/data/titanic/: submission.csv
2025-spring/week06/notebook/: demo.ipynb
2025-spring/week07/: README.md
2025-spring/week07/notebook/: demo.ipynb
2025-spring/week08/: README.md
2025-spring/week08/notebook/: demo.ipynb
2025-spring/week09/: README.md
2025-spring/week09/notebook/: demo.ipynb
2025-spring/week11/: README.md
2025-spring/week11/notebook/: demo.ipynb  german_credit_risk_example.ipynb
2025-spring/week12/: README.md
2025-spring/week12/notebook/: demo.ipynb  demo_20250331.ipynb  fastapi_demo.py  streamlit_demo.py  streamlit_demo2.py
2025-spring/week13/: README.md
2025-spring/week13/notebook/: demo.ipynb
2025-spring/week14/: README.md
2025-spring/week14/notebook/: data.pickle  demo.ipynb  iris_model.pkl  streamlit_demo.py  streamlit_demo3.py  streamlit_demo4.py
2025-spring/week15/: README.md
2025-spring/week15/notebook/: chatbot.py  demo.ipynb
docs/: environment.md  notes.md  references.md
miscellaneous/: dcr_data.ipynb  references.md  shap.ipynb
miscellaneous/nlp_code/C1_W1/: C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_02_word frequencies.ipynb  C1_W1_lecture_nb_03_logistic_regression_model.ipynb
miscellaneous/nlp_code/C1_W2/assignments/: C1_W2_Assignment.ipynb
miscellaneous/nlp_code/C1_W3/: C1_W3_lecture_nb_01_linear_algebra.ipynb
syllabus/: rmi8450-2025-spring.tex
utils/: generate_folders.py  main.py  notebook_template.j2  pyproject.toml  readme_template.j2
