[tool.poetry]
name = "utils"
version = "0.1.0"
description = "RMI 8450 @ GSU"
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
typer = {extras = ["all"], version = "^0.12.5"}
notebook = "^7.3.2"
ipykernel = "^6.29.5"
xlrd = "^2.0.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
flaml = {extras = ["automl"], version = "^2.3.3"}
nasdaq-data-link = "^1.0.4"
python-dotenv = "^1.0.1"
yfinance = "^0.2.54"
prophet = "^1.1.6"
imbalanced-learn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
utils = "utils.main:app"
