[project]
name = "machine-learning-for-actuarial-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "flaml[automl]>=2.3.4",
    "gensim>=4.3.3",
    "imbalanced-learn>=0.13.0",
    "interpret>=0.6.10",
    "ipykernel>=6.29.5",
    "notebook>=7.4.2",
    "openai>=1.81.0",
    "prophet>=1.1.6",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
    "xlrd>=2.0.1",
    "yfinance>=0.2.61",
]

[project.scripts]
utils = "utils.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }

[tool.uv.workspace]
members = [
    "utils"
]

[tool.hatch.build.targets.wheel]
packages = ["utils"]